--- a/style-test-721/src/default.scss
+++ b/style-test-721/src/default.scss
@@ -1,3 +1,9 @@
+*, ::before, ::after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 html {
   font-size: 10px;
 }
@@ -7,9 +13,21 @@ body {
   height: 100%;
 }
 
-* {
-   
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+
+
+body {
+  font-family: 'Baloo Chettan 2', cursive;
+  font-size: 1.8rem;  
+  font-weight: 400;
+  line-height: 1;
+}
+
+a {
+  text-decoration: none;
+}
+
+a, a:hover{
+  -webkit-box-sizing:all .4s ease-in-out;
+  -moz-box-sizing:all .4s ease-in-out;
+  transition:all .4s ease-in-out;
 }
