moving things around.  playing around with transform: translateY(-5%); and nesting containers.

--- a/style-test-721/src/components/Header/styles.scss
+++ b/style-test-721/src/components/Header/styles.scss
@@ -1,19 +1,26 @@
 .header {
-  height: 6.5rem;
+  height: 7.5rem;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,.1);
 
   .wrap {
+    height:100%;
     position: releative;
     max-width: 1450px;
     margin: 0 auto;
 
     .logo {
       position: absolute;
-      top: 8%; left: 10px;
-      -weblit-transform: translateY(-50%);
-      -moz-transform: translateY(-50%);
-      transform: translateY(-50%);
+      top: 2%; left: 10px;
+      -weblit-transform: translateY(-5%);
+      -moz-transform: translateY(-5%);
+      transform: translateY(-5%);
+      
     }
+
+    .img {
+      width:35px;
+      height:auto;
+      border-radius: 50%;    }
   }
   
 }
