--- a/style-test-721/src/components/Header/styles.scss
+++ b/style-test-721/src/components/Header/styles.scss
@@ -14,13 +14,14 @@
       -weblit-transform: translateY(-5%);
       -moz-transform: translateY(-5%);
       transform: translateY(-5%);
+      border-radius:50%;
       
     }
 
     .img {
       width:35px;
       height:auto;
-      border-radius: 50%;    }
+      }
   }
   
 }
