still playing with layout and heirarchy.

--- a/style-test-721/src/components/Header/styles.scss
+++ b/style-test-721/src/components/Header/styles.scss
@@ -10,7 +10,7 @@
 
     .logo {
       position: absolute;
-      top: 2%; left: 10px;
+      top: 2%; left: 10%;
       -weblit-transform: translateY(-5%);
       -moz-transform: translateY(-5%);
       transform: translateY(-5%);
