--- a/style-test-721/src/default.scss
+++ b/style-test-721/src/default.scss
@@ -32,3 +32,9 @@ a, a:hover{
   transition:all .4s ease-in-out;
 }
 
+.App {
+  width: 100%;
+  max-width: 1450px;
+  padding: 0 10%;
+  margin: 0 auto;
+}
