--- a/SVGpractice/assets/css/style.css
+++ b/SVGpractice/assets/css/style.css
@@ -3,16 +3,11 @@ body {
   margin: 0;
   padding: 0;
 }
-/*.hero1 {
+.hero1 {
   padding-top: 2%;
-  background: #fcfaf9;
-  max-width: 1440px;
-  max-height: 300px;
-  background-image: url("../img/AC190x400.svg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover; 
-}*/
+  border-radius: 2%;
+  opacity: .60;
+}
 
 header h1{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
